Squashed commit of the following:
commit 7ea1ab1cee18db6569a5ca18c8ce3977e40f23cf
Author: Ross Timson <ross@rosstimson.com>
Date:   Sat Feb 15 20:51:25 2014 +0000

    Upgrade to ruby-install 0.4.0 + refactor.

    * Bump to 0.4.0
    * Use new --rubies-dir option, fixes #3  partial version string issues.
    * Add some extra tests for partial version strings.
    * Switch to using Serverspec instead of bats.

commit 8a230e70aaeb97a8477304264c3671e6f2093960
Author: Ross Timson <ross@rosstimson.com>
Date:   Sat Feb 15 16:49:19 2014 +0000

    Adding inital unit test & fixing bunch of Rubocops fails

commit ca9b46ed4a765dd70071e7dcba6d353b382601a5
Author: Ross Timson <ross@rosstimson.com>
Date:   Sat Feb 15 16:02:53 2014 +0000

    Adding Rakefile for running tests.

commit 8b84a2da568d7c023562c8a758b4e7db486e8d1d
Author: Ross Timson <ross@rosstimson.com>
Date:   Sat Feb 15 16:02:40 2014 +0000

    Adding utf-8 encoding comment.

commit 21d234abdf82ae3d670491098eea027c82515d7f
Author: Ross Timson <ross@rosstimson.com>
Date:   Sat Feb 15 13:18:17 2014 +0000

    Adding new OSs to metadata.

commit 9d7f7f37a344fcd5f9fe981a92f41b5b614d43c3
Author: Ross Timson <ross@rosstimson.com>
Date:   Sat Feb 15 13:09:19 2014 +0000

    Adding new OSs to test-kitchen inc. Amazon Linux

commit fcda8cb1b832b6d7138d7880057a9c396be2b046
Author: Ross Timson <ross@rosstimson.com>
Date:   Sat Feb 15 13:04:38 2014 +0000

    Bumping gems and adding some to change test suite.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,11 +1,26 @@
 ---
-driver_plugin: vagrant
+driver:
+  name: vagrant
+
+provisioner:
+  name: chef_solo
 
 platforms:
-- name: ubuntu-12.04
-- name: ubuntu-10.04
-- name: centos-6.5
-- name: centos-5.10
+  - name: ubuntu-12.04
+  - name: debian-7.2.0
+  - name: centos-6.5
+  - name: amazon
+    driver:
+      name: ec2
+      image_id: ami-5456b823
+      region: eu-west-1
+      availability_zone: eu-west-1a
+      flavor_id: m1.small
+      username: ec2-user
+      aws_access_key_id: <%= ENV['TK_AWS_ACCESS_KEY_ID'] %>
+      aws_secret_access_key: <%= ENV['TK_AWS_SECRET_ACCESS_KEY'] %>
+      aws_ssh_key_id: <%= ENV['TK_AWS_SSH_KEY_ID'] %>
+      ssh_key: <%= File.expand_path('~/.ssh/test-kitchen-aws.pem') %>
 
 suites:
 - name: alltherubies
@@ -15,3 +30,7 @@ suites:
 - name: installation
   run_list:
   - recipe[ruby_install]
+- name: partial_ruby_version
+  run_list:
+  - recipe[ruby_install]
+  - recipe[partial_ruby_version]
